# Signal

./: .gitignore  PROJECT_STRUCTURE_GUIDELINES.md  PYCHARM_SETUP.md  README.md  README_NEW_STRUCTURE.md  env.example  info_specify.txt  main.py  pyproject.toml  requirements.txt
.specify/memory/: constitution.md
launch/: README.md  github_ubuntu_commands.sh  github_windows_commands.ps1  ubuntu_setup.sh  windows_setup.ps1
launch/gui/: main_app.py  strobe_test_strobe.json  strobe_test_strobe.npy
launch/tests/: full_integration_test.py  math_engine_test.py  strobe_system_test.py  test_full_integration.py  test_gui.py  test_math_engine.py  test_strobe_system.py
specs/001-disktop-postgresql-sqlite/: CLAUDE.md  data-model.md  plan.md  plan_rus.md  quickstart.md  research.md  spec.md  spec_rus.md  tasks.md  tasks_rus.md
src/: config.py
src/core/: __init__.py  data_context.py  observer.py
src/database/: connection.py  models.py
src/gui/: localization.py  main_window.py  run_gui.py  strobe_widget.py
src/math/: signal_generator.py  strobe_system.py
src/utils/: __init__.py  logger.py  reporter.py
src/visualization/: 2d_plots.py  matplotlib_2d.py  strobe_plot.py
tests/: test_main.py
tests/gui/: test_main_window.py
tests/integration/: test_database_operations.py
tests/performance/: test_gpu_acceleration.py  test_signal_generation.py
tests/unit/: test_mathematical_law.py  test_signal_data.py  test_spectral_analysis.py
